--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.2.4",
+    "@sendgrid/mail": "^8.1.3",
     "@types/mdx": "^2.0.13",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.42",
